@startuml
skinparam linetype ortho
skinparam nodesep 150
skinparam ranksep 100
skinparam dpi 300

!startsub GAMEFIELD
class Point <<immutable>> {
    - x : int {readOnly}
    - y : int {readOnly}
    + Point(x : int, y : int)
    + x() : int
    + y() : int
    + toString() : String
    + equals(Object other) : boolean
    + hashCode() : long
    + sum(other : Point) : Point
    + sum(points : Point...) : Point
    + sum(points : Collection<Point>) : Point {static}
    + scale(factor : int) : Point
    + inverse() : Point
    + getAdjacentPositions(scaleFactor : int) : Set<Point> {static}
}

note "Java record with extra sum() method" as N1
N1 .. Point

class GameField <<synchronized>> {
    - cards :  Map<Point, CardCell>
    - angles : Map<Point, AngleCell>
    - availableCells: Set<Point>
    - symbolCounters: Map<Symbol, int>
    - lock : ReentrantReadWriteLock
    + getCards() : Map<Point, Card>
    + getAngleSymbols() : Map<Point, Symbol>
    + getCardCells() : Map<Point, CardCell>
    + getCardInPosition(position : Points) : CardCell
    + getSymbolCount(symbol : Symbol) : int
    + getAvailablePositions() : Set<Point>
    + placeCard(position : Point, card : Card, orientation : CardOrientation)
    - registerCard(position : Point, card : Card, orientation : CardOrientation)
    - updateAngles(position : Point, card : Card, orientation : CardOrientation)
    - updateCounters(position : Point, card : Card, orientation : CardOrientation)
    - updateAvailableCells(position : Point, card : Card, orientation : CardOrientation)
}
' Returned sets are immutable copies

class CardCell <<immutable>> {
    - position : Point {readOnly}
    - card : Card {readOnly}
    - cardOrientation : CardOrientation {readOnly}
    + CardCell(position : Point, card : Card, orientation : CardOrientation)
    + getPosition() : Point
    + getCard() : Card
    + getCardOrientation() : CardOrientation
    + getCardColor() : CardColor
    + getVisibleCardSide() : CardSide
}
note top : Java record

class AngleCell <<immutable>> {
     - topCardPosition : Point {readOnly}
     - bottomCardPosition : Point {readOnly}
     - topSymbol : Point {readOnly}
     - bottomSymbol : Point {readOnly}
     + AngleCell(position : Point, topCardPosition : Point, bottomCardPosition : Point, topSymbol : Symbol, bottomSymbol : Symbol)
     + AngleCell(position : Point, topCardPosition : Point, topSymbol : Point)
     + withNewTopCard(newTopCardPosition : Point, newTopSymbol : Symbol) : AngleCell
}

!endsub

CardCell .r..> Point : <<uses>>
AngleCell .r..> Point : <<uses>>
GameField .r..> Point : <<uses>>
GameField --o CardCell : - cards
GameField --o AngleCell : - angles

@enduml